--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,13 @@
 {
     "recommendations": [
+        "wokwi.wokwi-vscode",
         "raspberry-pi.raspberry-pi-pico",
+        "marus25.cortex-debug",
+        "ms-vscode.cpptools",
+        "ms-vscode.cpptools-themes",
         "ms-vscode.cpptools-extension-pack",
         "twxs.cmake",
-        "wokwi.wokwi-vscode",
-        "ms-vscode.vscode-serial-monitor",
-        "ms-vscode.cpptools-themes",
-        "marus25.cortex-debug",
         "ms-vscode.cmake-tools",
-        "ms-vscode.cpptools"
+        "ms-vscode.vscode-serial-monitor"
     ]
 }
